tests/golden/external-certificates/patch-operator/patch-operator/01_helm_chart/patch-operator/templates/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_patch-operator-validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: syn-patch-operator/serving-cert
  creationTimestamp: null
  name: patch-operator-validating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSS4uLi4uCi0tLS0tRU5EIENFUlRJRklDQVRFLS0tLS0=
      service:
        name: patch-operator-webhook-service
        namespace: syn-patch-operator
        path: /validate-redhatcop-redhat-io-v1alpha1-patch
    failurePolicy: Fail
    name: vpatch.kb.io
    rules:
      - apiGroups:
          - redhatcop.redhat.io
        apiVersions:
          - v1alpha1
        operations:
          - UPDATE
        resources:
          - patches
    sideEffects: None
